--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
     <style>
       .cid-u5SU4nnvtw {
         overflow: hidden;
-        background-image: url("assets/images/photo-1485579149621-3123dd979885.jpg");
+        background-image: url("assets/images/photo-1485579149621-3123dd979885.JPG");
       }
     </style>
     <section
