--- a/index.html
+++ b/index.html
@@ -1180,7 +1180,7 @@
       .cid-u5SU4nnvtw {
         overflow: hidden;
         background-image: url("assets/images/photo-1485579149621-3123dd979885.JPG");
-        position:relative;
+        position:fixed;
       }
     </style>
     <section
