--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="shortcut icon"
-      href="assets/images/logo5.png"
+      href="assets/images/tilogo.png"
       type="image/x-icon"
     />
     <meta
@@ -146,11 +146,13 @@
         padding: 16px !important;
         margin: 0 !important;
         border-radius: 1rem !important;
-        transition: 0.3s all !important;
+        transition: 1s all !important;
       }
 
       .cid-u5SU4nnDsU .navbar-nav .nav-item .nav-link:hover {
-        background-color: rgba(27, 31, 10, 0.06);
+        /* background-color: rgba(27, 31, 10, 0.06); */
+        background-color: black;
+        color: white !important;
       }
 
       .cid-u5SU4nnDsU .navbar-nav .open .nav-link::after {
@@ -791,6 +793,9 @@
           padding: 1rem;
         }
       }
+      .qqq {
+        background-color: black;
+      }
     </style>
 
     <section
@@ -804,17 +809,11 @@
             <span class="navbar-logo">
               <a href="https://mobiri.se">
                 <img
-                  src="assets/images/photo-1573164713988-8665fc963095.jpeg"
+                  class="qqq"
+                  src="assets/images/logo.png"
                   style="height: 4.3rem"
                 />
               </a>
-            </span>
-            <span class="navbar-caption-wrap">
-              <a
-                class="navbar-caption text-black display-4"
-                href="https://mobiri.se"
-                >Abhiyantrix</a
-              >
             </span>
           </div>
           <button
@@ -854,11 +853,6 @@
                 <a class="nav-link link text-black display-4" href="#">Team</a>
               </li>
             </ul>
-            <div class="navbar-buttons mbr-section-btn">
-              <a class="btn btn-primary display-4" href="https://mobiri.se"
-                >Join Now</a
-              >
-            </div>
           </div>
         </div>
       </nav>
@@ -1179,8 +1173,7 @@
     <style>
       .cid-u5SU4nnvtw {
         overflow: hidden;
-        background-image: url("assets/images/photo-1485579149621-3123dd979885.JPG");
-        position:fixed;
+        background-image: url("assets/GALLERY PHOTOS/12.jpg");
       }
     </style>
     <section
@@ -1386,9 +1379,7 @@
                 </div>
               </div>
               <div class="image-wrapper d-flex justify-content-center mt-3">
-                <img
-                  src="assets/images/photo-1671726203454-5d7a5370a9f4.jpeg"
-                />
+                <img src="assets/images/mech.png" />
               </div>
             </div>
           </div>
@@ -1839,7 +1830,7 @@
       class="gallery1 mbr-gallery cid-u5SU4noBsU"
       id="gallery-10-u5SU4noBsU"
     >
-      <div class="container-fluid">
+      <div class="container-fluid" id="gallery">
         <div class="row justify-content-center">
           <div class="col-12 content-head">
             <div class="mb-5">
@@ -1854,66 +1845,42 @@
         <div class="row mbr-gallery">
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1485827404703-89b55fcc595e.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/1.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1526374965328-7f61d4dc18c5.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/7.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1531297484001-80022131f5a1.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/8.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1488229297570-58520851e868.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/9.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1526666923127-b2970f64b422.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/4.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1478432780021-b8d273730d8c.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/11.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1518770660439-4636190af475.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/14.JPG" />
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 item gallery-image">
             <div class="item-wrapper mb-3">
-              <img
-                class="w-100"
-                src="assets/images/photo-1519389950473-47ba0277781c.jpeg"
-              />
+              <img class="w-100" src="assets/GALLERY PHOTOS/13.JPG" />
             </div>
           </div>
         </div>
@@ -2838,16 +2805,16 @@
             <div class="row-links mt-2 mb-3">
               <ul class="row-links-soc">
                 <li class="row-links-soc-item mbr-fonts-style display-7">
-                  <a href="#" class="text-white">About</a>
+                  <a href="about.html" class="text-white">About</a>
                 </li>
                 <li class="row-links-soc-item mbr-fonts-style display-7">
-                  <a href="#" class="text-white">Events</a>
+                  <a href="events.html" class="text-white">Events</a>
                 </li>
                 <li class="row-links-soc-item mbr-fonts-style display-7">
-                  <a href="#" class="text-white">Gallery</a>
+                  <a href="#gallery" class="text-white">Gallery</a>
                 </li>
                 <li class="row-links-soc-item mbr-fonts-style display-7">
-                  <a href="#" class="text-white">Contact</a>
+                  <a href="#contact" class="text-white">Contact</a>
                 </li>
               </ul>
             </div>
