--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
     <style>
       .cid-u5SU4nnvtw {
         overflow: hidden;
-        background-image: url("assets/GALLERY PHOTOS/12.jpg");
+        background-image: url("https://drive.google.com/file/d/1rE2kLwOAJSTaUzuNW0H-qsGhWr-Jkj9b/view?usp=drive_link");
       }
     </style>
     <section
