--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
     <style>
       .cid-u5SU4nnvtw {
         overflow: hidden;
-        background-image: url("assets/GALLERY PHOTOS/12.jpg");
+        background-image: url("assets/GALLERY PHOTOS/12.JPG");
       }
     </style>
     <section
