--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
     <style>
       .cid-u5SU4nnvtw {
         overflow: hidden;
-        background-image: url("assets/GALLERY PHOTOS/12.JPG");
+        
       }
     </style>
     <section
@@ -1181,7 +1181,9 @@
       id="image-13-u5SU4nnvtw"
     >
       <div class="container">
-        <div class="row"></div>
+        <div class="row">
+          <img src="assets/GALLERY PHOTOS/12.JPG"/>
+        </div>
       </div>
     </section>
     <style>
