--- a/index.html
+++ b/index.html
@@ -807,13 +807,13 @@
         <div class="container">
           <div class="navbar-brand">
             <span class="navbar-logo">
-              <a href="https://mobiri.se">
+              
                 <img
                   class="qqq"
                   src="assets/images/logo.png"
                   style="height: 4.3rem"
                 />
-              </a>
+            
             </span>
           </div>
           <button
@@ -945,7 +945,7 @@
       class="header16 cid-u5SU4nnQ2e mbr-fullscreen mbr-parallax-background"
       id="hero-17-u5SU4nnQ2e"
     >
-      <video class="vid1" src="final.mp4" autoplay loop muted></video>
+      <video class="vid1" src="https://drive.google.com/file/d/1_L4aQMI7ifHQSA6BZKPZezV7359h3twR/view?usp=drive_link" autoplay loop muted></video>
       <video
         class="vid2"
         src="abbx final vertical.mp4"
