--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
       class="header16 cid-u5SU4nnQ2e mbr-fullscreen mbr-parallax-background"
       id="hero-17-u5SU4nnQ2e"
     >
-      <video class="vid1" src="https://drive.google.com/file/d/1_L4aQMI7ifHQSA6BZKPZezV7359h3twR/view?usp=drive_link" autoplay loop muted></video>
+      <video class="vid1" src="final.mp4" autoplay loop muted></video>
       <video
         class="vid2"
         src="abbx final vertical.mp4"
@@ -1118,7 +1118,7 @@
       .cid-u5SU4nnBqo {
         padding-top: 6rem;
         padding-bottom: 6rem;
-        background-color: #ffffff;
+        background-color: #363333;
       }
 
       .cid-u5SU4nnBqo .item:focus,
