--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
       .cid-u5SU4nnBqo {
         padding-top: 6rem;
         padding-bottom: 6rem;
-        background-color: #363333;
+        background-color: #ffffff;
       }
 
       .cid-u5SU4nnBqo .item:focus,
