--- a/index.html
+++ b/index.html
@@ -2115,16 +2115,16 @@
             style="transform: translate3d(-200px, 0px, 0px)"
           >
             <div class="grid-item">
-              <img src="assets/images/photo-1451187580459-43490279c0fa.jpeg" />
+              <img src="assets/GALLERY PHOTOS/3.JPG" />
             </div>
             <div class="grid-item">
-              <img src="assets/images/photo-1488590528505-98d2b5aba04b.jpeg" />
+              <img src="assets/GALLERY PHOTOS/6.JPG" />
             </div>
             <div class="grid-item">
-              <img src="assets/images/photo-1496065187959-7f07b8353c55.jpeg" />
+              <img src="assets/GALLERY PHOTOS/IMG_1076.JPG" />
             </div>
             <div class="grid-item">
-              <img src="assets/images/photo-1516251193007-45ef944ab0c6.jpeg" />
+              <img src="assets/GALLERY PHOTOS/IMG_1196.JPG" />
             </div>
           </div>
         </div>
