--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
               <li class="nav-item">
-                <a class="nav-link link text-black display-4" href="#"
+                <a class="nav-link link text-black display-4" href="#events-1-u5SU4noeB4"
                   >Events</a
                 >
               </li>
@@ -1355,33 +1355,37 @@
                   <div class="item features-without-image col-12">
                     <div class="item-wrapper">
                       <p class="mbr-text mbr-fonts-style display-7">
-                        Welcome to the realm of sky conquerors, where dreams
-                        take flight and boundaries are mere illusions.
+                        Drift into a realm of dreams with our Celestial Dreamer tee. Adorned with ethereal celestial motifs and mystical imagery, this shirt invites you to ponder the mysteries of the cosmos and embrace the beauty of the unknown.
                       </p>
                     </div>
                   </div>
                   <div class="item features-without-image col-12">
                     <div class="item-wrapper">
                       <p class="mbr-text mbr-fonts-style display-7">
-                        Join us, the trailblazing students of the Aerospace
-                        Department, as we ignite the 4th edition of Abhiyantrix
-                        Fest with a bang!
+                       Available in a variety of sizes and crafted with comfort in mind, our space-themed t-shirts are the perfect addition to any wardrobe. Whether you're a seasoned astronomer or a dreamer gazing at the night sky, let your passion for space shine with every step in one of our captivating tees from Abhiyantrix.
                       </p>
                     </div>
                   </div>
                   <div class="item features-without-image col-12">
-                    <div class="item-wrapper">
-                      <p class="mbr-text mbr-fonts-style display-7">
-                        Embark on a journey of innovation, passion, and sheer
-                        adrenaline as we redefine the limits of aerospace
-                        excellence.
-                      </p>
-                    </div>
+                    
                   </div>
                 </div>
               </div>
               <div class="image-wrapper d-flex justify-content-center mt-3">
                 <img src="assets/images/mech.png" />
+              </div>
+              <div class="button">
+                <button class="btn" type="button">
+  <strong>SPACE</strong>
+  <div id="container-stars">
+    <div id="stars"></div>
+  </div>
+
+  <div id="glow">
+    <div class="circle"></div>
+    <div class="circle"></div>
+  </div>
+</button>
               </div>
             </div>
           </div>
@@ -1416,6 +1420,175 @@
       .cid-u5SU4noeB4 .item {
         margin-bottom: 2rem;
       }
+
+      .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 13rem;
+  overflow: hidden;
+  height: 3rem;
+  background-size: 300% 300%;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 4px transparent;
+  background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #ffdb3b 10%,#FE53BB 45%, #8F51EA 67%, #0044ff 87%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+#container-stars {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: 0.5s;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+}
+
+strong {
+  z-index: 2;
+  font-family: 'Avalors Personal Use';
+  font-size: 12px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px white;
+}
+
+#glow {
+  position: absolute;
+  display: flex;
+  width: 12rem;
+}
+
+.circle {
+  width: 100%;
+  height: 30px;
+  filter: blur(2rem);
+  animation: pulse_3011 4s infinite;
+  z-index: -1;
+}
+
+.circle:nth-of-type(1) {
+  background: rgba(254, 83, 186, 0.636);
+}
+
+.circle:nth-of-type(2) {
+  background: rgba(142, 81, 234, 0.704);
+}
+
+.btn:hover #container-stars {
+  z-index: 1;
+  background-color: #212121;
+}
+
+.btn:hover {
+  transform: scale(1.1)
+}
+
+.btn:active {
+  border: double 4px #FE53BB;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
+}
+
+.btn:active .circle {
+  background: #FE53BB;
+}
+
+#stars {
+  position: relative;
+  background: transparent;
+  width: 200rem;
+  height: 200rem;
+}
+
+#stars::after {
+  content: "";
+  position: absolute;
+  top: -10rem;
+  left: -100rem;
+  width: 100%;
+  height: 100%;
+  animation: animStarRotate 90s linear infinite;
+}
+
+#stars::after {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+}
+
+#stars::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 170%;
+  height: 500%;
+  animation: animStar 60s linear infinite;
+}
+
+#stars::before {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+  opacity: 0.5;
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-135rem);
+  }
+}
+
+@keyframes animStarRotate {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0);
+  }
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse_3011 {
+  0% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
 
       @media (max-width: 767px) {
         .cid-u5SU4noeB4 .item {
