--- a/index.html
+++ b/index.html
@@ -1374,8 +1374,8 @@
               <div class="image-wrapper d-flex justify-content-center mt-3">
                 <img src="assets/images/mech.png" />
               </div>
-              <div class="button">
-                <button class="btn" type="button">
+              <div class="hi">
+                <button class="yash" type="button">
   <strong>SPACE</strong>
   <div id="container-stars">
     <div id="stars"></div>
@@ -1421,7 +1421,7 @@
         margin-bottom: 2rem;
       }
 
-      .btn {
+      .yash {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1481,23 +1481,23 @@ strong {
   background: rgba(142, 81, 234, 0.704);
 }
 
-.btn:hover #container-stars {
+.yash:hover #container-stars {
   z-index: 1;
   background-color: #212121;
 }
 
-.btn:hover {
+.yash:hover {
   transform: scale(1.1)
 }
 
-.btn:active {
+.yash:active {
   border: double 4px #FE53BB;
   background-origin: border-box;
   background-clip: content-box, border-box;
   animation: none;
 }
 
-.btn:active .circle {
+.yash:active .circle {
   background: #FE53BB;
 }
 
