--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
               </div>
               <div class="hi">
                 <button class="yash" type="button">
-  <strong>SPACE</strong>
+  <strong class="pandu">SPACE</strong>
   <div id="container-stars">
     <div id="stars"></div>
   </div>
@@ -1450,7 +1450,7 @@
   border-radius: 5rem;
 }
 
-strong {
+.pandu {
   z-index: 2;
   font-family: 'Avalors Personal Use';
   font-size: 12px;
