--- a/index.html
+++ b/index.html
@@ -1375,6 +1375,8 @@
                 <img src="assets/images/mech.png" />
               </div>
               <div class="hi">
+                <div class="ram">
+                  
                 <button class="yash" type="button">
   <strong class="pandu">SPACE</strong>
   <div id="container-stars">
@@ -1386,6 +1388,7 @@
     <div class="circle"></div>
   </div>
 </button>
+              </div>
               </div>
             </div>
           </div>
@@ -1419,6 +1422,18 @@
 
       .cid-u5SU4noeB4 .item {
         margin-bottom: 2rem;
+      }
+
+      .hi{
+         position: relative;
+      }
+
+      .ram{
+        margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
       }
 
       .yash {
