--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
                 <div class="ram">
                   
                 <button class="yash" type="button">
-  <strong class="pandu">SPACE</strong>
+  <strong class="pandu">BUY NOW</strong>
   <div id="container-stars">
     <div id="stars"></div>
   </div>
@@ -1429,11 +1429,11 @@
       }
 
       .ram{
-        margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+       margin: 0;
+       position: absolute;
+        top: 50%;
+       -ms-transform: translateY(-50%);
+       transform: translateY(-50%);
       }
 
       .yash {
