--- a/index.html
+++ b/index.html
@@ -944,10 +944,10 @@
       class="header16 cid-u5SU4nnQ2e mbr-fullscreen mbr-parallax-background"
       id="hero-17-u5SU4nnQ2e"
     >
-      <video class="vid1" src="https://drive.google.com/file/d/1ltmfFbji1wiILPKKG3BNm9dPMZELuy-M/view?usp=drive_link" autoplay loop muted></video>
+      <video class="vid1" src="final.mp4" autoplay loop muted></video>
       <video
         class="vid2"
-        src="https://drive.google.com/file/d/1ebTblfrl93tcBRyE47KNpUVa-cD6RFSb/view?usp=drive_link"
+        src="abbx final vertical.mp4"
         autoplay
         loop
         muted
